# ctapipe_io_hess

./: .pre-commit-config.yaml  CHANGES.rst  MANIFEST.in  README.md  __init__.py  environment.yml  pyproject.toml  sonar-project.properties
.github/: release-drafter.yml
.github/workflows/: ci.yml
docs/: conf.py  index.rst  installation.rst  reference.rst
docs/tutorials/: developer_help.ipynb
src/ctapipe_io_hess/: __init__.py
src/ctapipe_io_hess/cli/: fib.py
src/ctapipe_io_hess/tests/: conftest.py  test_fibonacci.py  test_plugin.py  test_script.py  test_version.py
