[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ctapipe-io-hess"
description = "ctapipe io plugin for reading HESS DST files."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    {name = "Karl Kosack", email = "karl.kosack@cea.fr"},
]

requires-python = ">=3.10"
dependencies = [
    "ctapipe~=0.26",
    "uproot",
]

# needed for setuptools_scm, we don"t define a static version
dynamic = ["version"]

[project.urls]
repository = "https://gitlab.com/cta-observatory/ctapipe-io-hess"
#documentation = "http://cta-computing.gitlab-pages.cta-observatory.org/documentation/ctapipe-io-hess"

# Register the plugin with ctapipe:
[project.entry-points.ctapipe_io]
PluginEventSource = "ctapipe_io_hess:HESSEventSource"


[tool.setuptools.packages.find]
where = ["src"]
exclude = ["ctapipe_io_hess._dev_version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]
doc = [
  "sphinx",
  "numpydoc",
  "sphinx-changelog",
  "pydata-sphinx-theme",
]
dev = [
  "setuptools_scm",
  "towncrier",
]

# we can use self-references to simplify all, needs to match project.name defined above
all = [
  "ctapipe-io-hess[test,doc,dev]",
]

[tool.setuptools_scm]
write_to = "src/ctapipe_io_hess/_version.py"

[tool.towncrier]
package = "ctapipe_io_hess"
directory = "docs/changes"
filename = "CHANGES.rst"
template = "docs/changes/template.rst"
underlines = ["-", "~", "^"]
# Let towncrier create proper links to the merged MR.
# By default, towncrier connects everything to issues.
# We rather want to connect it to merge request
issue_format = "`!{issue} <https://gitlab.cta-observatory.org/cta-computing/documentation/ctapipe-io-hess/-/merge_requests/{issue}>`__"

[tool.towncrier.fragment.feature]
    name = "New Features"
    showcontent = true

[tool.towncrier.fragment.bugfix]
    name = "Bug Fixes"
    showcontent = true

[tool.towncrier.fragment.api]
    name = "API Changes"
    showcontent = true

[tool.towncrier.fragment.optimization]
    name = "Refactoring and Optimization"
    showcontent = true

[tool.towncrier.fragment.maintenance]
    name = "Maintenance"
    showcontent = true

[tool.ruff]
line-length = 88
target-version = "py310"


[tool.ruff.lint]
extend-select = [
    "I", # isort
    "N", # pep8 naming
    "D", # pydocstyle
    "NPY", # numpy
    "PT", # pytest
    "UP", # pyupgrade
    "COM", # flake8-commas
    "ISC", # implicit string concat rules
    "ICN", # import name conventions
    "G", # logging
]
ignore = [
    "COM812", # incompatible with ruff format
    "ISC001", # incompatible with ruff format
    # FIXME: THIS IGNORE should be removed in actual projects, it's here only for the template
    "N999",   # ignore N999 here to keep obvious place holder name ctapipe_io_hess
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# no documentation linting for test files
"**/tests/**" = ["D"]
"**/tests_*.py" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
profile = "black"
line_length = 88

[tool.coverage.run]
relative_files = true
source = ["src"]
omit = [
    "src/ctapipe_io_hess/_version.py",
    "src/ctapipe_io_hess/_dev_version/*"
]

[tool.pytest.ini_options]
minversion = "7"
testpaths = ["src"]
log_cli_level = "INFO"
xfail_strict = true
# print summary of failed tests, force errors if settings are misspelled
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = [
    "error",
    # this warning should not be turned into an error, will happen e.g. when
    # using wheels compiled against an older version of numpy then is used at runtime
    # left as warning as the other direction (compiled vs. newer, using older numpy) is
    # problematic
    "default:numpy.ndarray size changed:RuntimeWarning"
]


[tool.repo-review]
select = ["PY", "PP", "PC"]
ignore = [
    "PY007", # we do not use tox for now
    "PC140", # mypy is not used
    "PC170", # pygrep is not used
    "PC180", # prettier is not used
    "PC111", # blacken-docs is not used
    "PC901", # no CI setup currently for updating pre-commit hooks
]

# fits files are sometimes mistaken for text files as they start with an ASCII header
# we need to ignore them here
[tool.codespell]
skip = "*.fits,*.fits.fz"
